--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -7,6 +7,7 @@ comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
 executing==2.1.0
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.27.0
 jedi==0.19.1
@@ -20,11 +21,13 @@ pandas==2.2.3
 parso==0.8.4
 pip-tools==7.4.1
 platformdirs==4.3.6
+pluggy==1.5.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
 pure_eval==0.2.3
 Pygments==2.18.0
 pyproject_hooks==1.1.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==306
