--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 non-git/
 ~$*
 .vscode/
+graphhopper/
+
+!graphhopper/config.yml
+!graphhopper/setup-guide.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
