--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -1,5 +1,7 @@
 asttokens==2.4.1
 build==1.2.2
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
 colorama==0.4.6
@@ -7,6 +9,7 @@ comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
 executing==2.1.0
+idna==3.10
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.27.0
@@ -32,6 +35,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pywin32==306
 pyzmq==26.2.0
+requests==2.32.3
 setuptools==75.1.0
 six==1.16.0
 spyder-kernels==3.0.0
@@ -39,5 +43,6 @@ stack-data==0.6.3
 tornado==6.4.1
 traitlets==5.14.3
 tzdata==2024.1
+urllib3==2.2.3
 wcwidth==0.2.13
 wheel==0.44.0
