pytest.ini toevoegen aan gitignore (hopelijk op juiste plek)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ cache/
 !graphhopper/config.yml
 !graphhopper/setup-guide.md
 
+pytest.ini
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
