--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -9,6 +9,8 @@ comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
 executing==2.1.0
+geographiclib==2.0
+geopy==2.4.1
 idna==3.10
 iniconfig==2.0.0
 ipykernel==6.29.5
