--- a/Python/requirements.txt
+++ b/Python/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
+et_xmlfile==2.0.0
 executing==2.1.0
 geographiclib==2.0
 geopy==2.4.1
@@ -21,6 +22,7 @@ jupyter_core==5.7.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.1.1
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -43,6 +45,7 @@ six==1.16.0
 spyder-kernels==3.0.0
 stack-data==0.6.3
 tornado==6.4.1
+tqdm==4.67.0
 traitlets==5.14.3
 tzdata==2024.1
 urllib3==2.2.3
